# BluePrintsTools

./: Cargo.toml  README.md
benches/: solve_tree_search.rs
src/: iddfs.rs  lib.rs  main.rs  morajai.rs  morajai_display.rs  search.rs  solve.rs
src/morajai/: mod.rs  morajai_display.rs  solve.rs
src/numeric_core/: mod.rs
